{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 29,
  "lineage": "0bfd526a-70e9-f7eb-bd14-08cab0ef6218",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkInterfaces/accept-nic",
            "internal_domain_name_suffix": "fylymp3b5joudi55bnmxz1vptg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/accept-pip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/accept-vnet/subnets/accept-subnet"
              }
            ],
            "location": "westeurope",
            "name": "accept-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_public_ip.accept",
            "azurerm_resource_group.test",
            "azurerm_subnet.accept",
            "azurerm_virtual_network.accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkInterfaces/production-nic",
            "internal_domain_name_suffix": "1mwz2aw3zd1upbafjp5lfdjfsc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/production-pip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/production-vnet/subnets/production-subnet"
              }
            ],
            "location": "westeurope",
            "name": "production-nic",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_public_ip.production",
            "azurerm_resource_group.test",
            "azurerm_subnet.production",
            "azurerm_virtual_network.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkInterfaces/test-nic",
            "internal_domain_name_suffix": "jyjjrch0nnqupbjln1pbsiac5a.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/test-pip",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet"
              }
            ],
            "location": "westeurope",
            "name": "test-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.test",
            "azurerm_subnet.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/accept-nsg",
            "location": "westeurope",
            "name": "accept-nsg",
            "resource_group_name": "alan_ahmad-rg",
            "security_rule": [],
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/production-nsg",
            "location": "westeurope",
            "name": "production-nsg",
            "resource_group_name": "alan_ahmad-rg",
            "security_rule": [],
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/test-nsg",
            "location": "westeurope",
            "name": "test-nsg",
            "resource_group_name": "alan_ahmad-rg",
            "security_rule": [],
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/accept-nsg/securityRules/accept-rule",
            "name": "accept-rule",
            "network_security_group_name": "accept-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "alan_ahmad-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.accept",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/production-nsg/securityRules/production-rule",
            "name": "production-rule",
            "network_security_group_name": "production-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "alan_ahmad-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.production",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/test-nsg/securityRules/test-rule",
            "name": "test-rule",
            "network_security_group_name": "test-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "alan_ahmad-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "xptpetclinic",
            "fqdn": "xptpetclinic.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/accept-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.119.132.128",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "accept-pip",
            "resource_group_name": "alan_ahmad-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "prodpetclinic",
            "fqdn": "prodpetclinic.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/production-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.119.132.157",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "production-pip",
            "resource_group_name": "alan_ahmad-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "testpetclinic",
            "fqdn": "testpetclinic.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/publicIPAddresses/test-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.119.132.120",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "test-pip",
            "resource_group_name": "alan_ahmad-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/accept-vnet/subnets/accept-subnet",
            "name": "accept-subnet",
            "resource_group_name": "alan_ahmad-rg",
            "virtual_network_name": "accept-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/production-vnet/subnets/production-subnet",
            "name": "production-subnet",
            "resource_group_name": "alan_ahmad-rg",
            "virtual_network_name": "production-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet",
            "name": "test-subnet",
            "resource_group_name": "alan_ahmad-rg",
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/accept-vnet/subnets/accept-subnet",
            "network_security_group_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/accept-nsg",
            "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/accept-vnet/subnets/accept-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.accept",
            "azurerm_resource_group.test",
            "azurerm_subnet.accept",
            "azurerm_virtual_network.accept"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/production-vnet/subnets/production-subnet",
            "network_security_group_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/production-nsg",
            "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/production-vnet/subnets/production-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.production",
            "azurerm_resource_group.test",
            "azurerm_subnet.production",
            "azurerm_virtual_network.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet",
            "network_security_group_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/networkSecurityGroups/test-nsg",
            "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test",
            "azurerm_subnet.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3f86172e-faa1-415d-a3ff-0b597ceeaf9e",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/accept-vnet",
            "location": "westeurope",
            "name": "accept-vnet",
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "029e2ddb-c8dd-47f7-8405-4bfeb28d2592",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/production-vnet",
            "location": "westeurope",
            "name": "production-vnet",
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8898124e-6bfa-4761-852b-6ede192002f8",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/alan_ahmad-rg/providers/Microsoft.Network/virtualNetworks/test-vnet",
            "location": "westeurope",
            "name": "test-vnet",
            "resource_group_name": "alan_ahmad-rg",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}